--- a/app-deployment.yml
+++ b/app-deployment.yml
@@ -1,2 +1,46 @@
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: ngcovid
+  name: ngcovid-app
+spec:
+  ports: 
+    - port: 80
+      nodePort: 32225
+  selector:
+    app: ngcovid-app
+  type: NodePort
 
+---
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ngcovid-app-deployment
+  namespace: ngcovid
+spec:
+  selector:
+    matchLabels:
+      app: ngcovid-app
+  template:
+    metadata:
+      labels:
+        app: ngcovid-app
+    spec:
+      containers:
+        - image: seyio/scraper-app
+          name: ngcovid-server
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name:  postgres-secrets
+                  key:  dburlpass
+            - name: REDIS_HOST
+              value: ngcovid-cache
+            - name: REDIS_PORT
+              value: '6379'            
+        - image: seyio/scraper-proxy:local
+          name: ngcovid-client
+          ports:
+            - containerPort: 80
